# project-python

./: .gitignore  .gitlab-ci.yml  .pypirc  Jenkinsfile  Jenkinsfile.groovy  LICENSE  Pipfile  README.md  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build-publish.yml  project-build-test.yml
docs/: Makefile  conf.py  demo.rst  index.rst  python_training_project.rst  usage.md
src/demo/: __main__.py
src/python_training_project/: __init__.py  __main__.py  calculate.py
tests/: test_calculate.py
tools/: build-docs.sh  build-package.sh  deploy-package.sh  lint-package.sh  test-package.sh
